syntax = "proto3";

option java_package = "org.stackroute.jobStatus";

service status{
  rpc getStatus(statusMessage) returns(StatusAPIResponse);
  rpc updateStatus(updateStatusMessage) returns(UpdateStatusAPIResponse);
}

message statusMessage{
  int32 jobApplicationId = 1;
}

message StatusAPIResponse{
  string jobStatus = 1;

  string responseMessage = 2;
  int32 responseCode = 3;
}

message updateStatusMessage{
  int32 jobApplicationId = 1;
  string jobStatus = 2;
}

message UpdateStatusAPIResponse{
  string responseMessage = 1;
  int32 responseCode = 2;
}